-vgg16 and resnet50 results are added

--- a/Without_Strafied.ipynb
+++ b/Without_Strafied.ipynb
@@ -22,7 +22,7 @@
     "from tqdm import tqdm\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from keras.applications import VGG16,ResNet50,InceptionV3\n",
+    "from keras.applications import VGG16, ResNet50, InceptionV3\n",
     "import imgaug as ia\n",
     "import imgaug.augmenters as iaa\n",
     "from hyperopt import fmin, hp, tpe, Trials, space_eval, STATUS_OK\n",
@@ -57,25 +57,14 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "def create_model(dropout=0.25,lr=0.0001,model=0):\n",
+    "def create_model(dropout=0.25, lr=0.0001, selected_model=VGG16):\n",
     "    input_shape = [IMAGE_WIDTH, IMAGE_HEIGHT, 3]\n",
     "\n",
-    "    # load pretrained model 'VGG16'\n",
-    "    if model ==0:\n",
-    "        base_model = VGG16(\n",
-    "            include_top=False,\n",
-    "            weights=\"imagenet\",\n",
-    "            input_shape=input_shape)\n",
-    "    elif model ==1:\n",
-    "        base_model = ResNet50(\n",
-    "            include_top=False,\n",
-    "            weights=\"imagenet\",\n",
-    "            input_shape=input_shape)\n",
-    "    elif model ==2:\n",
-    "        base_model = InceptionV3(\n",
-    "            include_top=False,\n",
-    "            weights=\"imagenet\",\n",
-    "            input_shape=input_shape)\n",
+    "    # load pretrained model\n",
+    "    base_model = selected_model(\n",
+    "        include_top=False,\n",
+    "        weights=\"imagenet\",\n",
+    "        input_shape=input_shape)\n",
     "    # trainable = False\n",
     "    base_model.trainable = False\n",
     "\n",
@@ -172,7 +161,7 @@
     "        #early stopping callback\n",
     "        early_stop = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=2)\n",
     "        #reduce LR callback\n",
-    "        reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.4,patience=2, min_lr=0.00001)\n",
+    "        reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.4, patience=2, min_lr=0.00001)\n",
     "        # fit\n",
     "        history = model.fit(x=train_X,\n",
     "                            y=train_y,\n",
@@ -203,7 +192,8 @@
    "execution_count": 6,
    "outputs": [],
    "source": [
-    "techniques = [\"Default\", \"Color Normalization\", \"CLAHE\", \"Gray Scale\", \"XYZ\"]"
+    "techniques = [\"Default\", \"Color Normalization\", \"CLAHE\", \"Gray Scale\", \"XYZ\"]\n",
+    "models = {\"VGG16\": VGG16, \"ResNet50\": ResNet50, \"InceptionV3\": InceptionV3}"
    ],
    "metadata": {
     "collapsed": false
@@ -617,21 +607,22 @@
     "dict_spec = {}\n",
     "dict_acc = {}\n",
     "dict_loss = {}\n",
+    "selected_model = \"InceptionV3\"\n",
     "for i, technique in enumerate(techniques):\n",
     "    try:\n",
-    "        X_train, y_train, X_test, y_test = read_dataset(mode=i,type=1)\n",
-    "        Helper.plot_pie_sets([np.argmax(y_train, axis=1), np.argmax(y_test, axis=1)], technique)\n",
-    "        model = create_model(dropout=0.3,model=1)\n",
+    "        X_train, y_train, X_test, y_test = read_dataset(mode=i, type=1)\n",
+    "        Helper.plot_pie_sets([np.argmax(y_train, axis=1), np.argmax(y_test, axis=1)], technique,selected_model)\n",
+    "        model = create_model(dropout=0.3, selected_model=models[selected_model])\n",
     "        model, acc, val_acc, loss, val_loss, test_acc, test_loss = Cross_Validation(model, X_train, y_train, X_test, y_test)\n",
     "        dict_acc[technique] = test_acc\n",
     "        dict_loss[technique] = test_loss\n",
-    "        Helper.plot_history([acc, val_acc, loss, val_loss], technique)\n",
-    "        sensitivity, specificity = Helper.plot_conf_matrix(model, X_test, y_test, technique)\n",
+    "        Helper.plot_history([acc, val_acc, loss, val_loss], technique, selected_model)\n",
+    "        sensitivity, specificity = Helper.plot_conf_matrix(model, X_test, y_test, technique, selected_model)\n",
     "        dict_sens[technique] = sensitivity\n",
     "        dict_spec[technique] = specificity\n",
     "    except Exception as e:\n",
     "        print(\"!\" * 100)\n",
-    "        print(f\"THERE IS A PROBLEM ({e}) WITH {technique} \")\n",
+    "        print(f\"THERE IS A PROBLEM \\n({e})\\n WITH {technique} \")\n",
     "        print(\"!\" * 100)\n",
     "        continue\n"
    ],
@@ -654,6 +645,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "MAIN_PATH = r\"Plots\"\n",
+    "os.makedirs(MAIN_PATH, exist_ok=True)\n",
+    "MODEL_PATH = os.path.join(MAIN_PATH, selected_model)\n",
+    "os.makedirs(MODEL_PATH, exist_ok=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "outputs": [
     {
@@ -666,23 +671,27 @@
     }
    ],
    "source": [
-    "def addlabels(x,y,ha):\n",
+    "def addlabels(x, y, ha):\n",
     "    for i in range(len(x)):\n",
-    "        plt.text(i, y[i], round(y[i],3),ha=ha)\n",
+    "        plt.text(i, y[i], round(y[i], 3), ha=ha)\n",
+    "\n",
+    "\n",
     "fig = plt.figure(figsize=(10, 9))\n",
     "\n",
     "# creating the bar plot\n",
     "plt.bar(classes, values1, color='red',\n",
     "        width=-0.2, label=\"Sensitivity\", align=\"edge\")\n",
-    "addlabels(classes,values1,\"right\")\n",
+    "addlabels(classes, values1, \"right\")\n",
     "plt.bar(classes, values2, color='green',\n",
     "        width=0.2, label=\"Specificity\", align=\"edge\")\n",
-    "addlabels(classes,values2,\"left\")\n",
+    "addlabels(classes, values2, \"left\")\n",
     "plt.xlabel(\"Process Techniques\")\n",
     "plt.ylabel(\"Value\")\n",
     "plt.title(\"Sensitivity and Specificity\")\n",
-    "plt.legend(loc=\"center\",bbox_to_anchor=(0.4,0.45))\n",
-    "plt.savefig(\"Plots/sens_spec.png\")"
+    "plt.legend(loc=\"center\", bbox_to_anchor=(0.4, 0.45))\n",
+    "\n",
+    "SS_PATH = os.path.join(MODEL_PATH, f\"sens_spec.png\")\n",
+    "plt.savefig(SS_PATH)"
    ],
    "metadata": {
     "collapsed": false
@@ -709,7 +718,9 @@
     "plt.ylabel(\"Accuracy\")\n",
     "plt.xlabel(\"Steps\")\n",
     "plt.legend(techniques, loc=0)\n",
-    "plt.savefig(\"Plots/result_acc.png\")"
+    "\n",
+    "ACC_PATH = os.path.join(MODEL_PATH, f\"result_acc.png\")\n",
+    "plt.savefig(ACC_PATH)"
    ],
    "metadata": {
     "collapsed": false
@@ -736,7 +747,9 @@
     "plt.ylabel(\"Loss\")\n",
     "plt.xlabel(\"Steps\")\n",
     "plt.legend(techniques, loc=0)\n",
-    "plt.savefig(\"Plots/result_loss.png\")"
+    "\n",
+    "LOSS_PATH = os.path.join(MODEL_PATH, f\"result_loss.png\")\n",
+    "plt.savefig(LOSS_PATH)"
    ],
    "metadata": {
     "collapsed": false
